--- a/scss/layout/_mainIndex.scss
+++ b/scss/layout/_mainIndex.scss
@@ -6,9 +6,10 @@
     text-align: center;
     margin-top: .5cm;
     margin-bottom: .5cm;
-    grid-template-columns: 40% 60%;
-    grid-template-areas:"imagenInicio intro" ;
-    justify-items: end;
+    grid-template-areas:
+    "imagenInicio intro intro"
+    "imagenInicio intro intro";
+    justify-content: center;
 }
 
 .imagenInicio{
@@ -17,8 +18,6 @@
 
 .intro{
     grid-area: intro;
-    width: 70%;
-    height: 70%;
 }
 
 h5{
@@ -33,8 +32,8 @@ h5{
     .sectionHome2{
         font-size: .5cm;
         grid-template-areas: 
-        "imagenInicio"
-        "intro";
+        "imagenInicio imagenInicio"
+        "intro intro";
     }
 }
 
@@ -42,7 +41,7 @@ h5{
     .sectionHome2{
         font-size: .75cm;
         grid-template-areas: 
-        "imagenInicio"
-        "intro";
+        "imagenInicio imagenInicio"
+        "intro intro";
     }
 }
