--- a/scss/layout/_mainAlma.scss
+++ b/scss/layout/_mainAlma.scss
@@ -1,3 +1,19 @@
-.imgAlma{
+.imgaAlma{
     text-align: center;
+}
+
+.textoAlma{
+    .link{
+        text-decoration: none;
+    }
+    p{
+        width: 75%;
+        margin-top: 1.5cm;
+        text-align: center;
+        font-size: 1cm;
+        color: white;
+    }
+    .h4{
+        font-size: 1.5cm;
+    }
 }
