--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,5 @@
 @import "./layout/mainIndex";
 @import "./layout/mainCursos";
 @import "./layout/mainAlma";
+@import "./layout/mainEscuela";
+@import "./layout/mainMentoria"
